# gnn_gym

./: .gitignore  AGENTS.md  GNN_GYM_PROJECT_SPEC.md  PROJECT_SPEC.md  README.md  pyproject.toml  temp.md
.codex/: config.toml
.codex/agents/: gnn-implementer.toml  gnn-researcher.toml  gnn-reviewer.toml  gnn-synthesizer.toml
configs/: default.yaml
configs/datasets/: amazon_ratings.yaml  cora.yaml  normal_tree_backedge.yaml  ogbg_molhiv.yaml  ogbg_molpcba.yaml  ogbl_collab.yaml  ogbn_arxiv.yaml  ogbn_products.yaml  peptides_func.yaml  peptides_struct.yaml  pubmed.yaml  roman_empire.yaml  toy_graph.yaml  toy_link.yaml  toy_node.yaml
configs/experiments/: core_all_baselines.yaml  core_gat.yaml  core_gcn.yaml  core_gin.yaml  node_hparam_search.yaml  research_2026_05_22_appnp_cora_confirm.yaml  research_2026_05_22_appnp_cora_refine.yaml  research_2026_05_22_appnp_cora_refined_confirm.yaml  research_2026_05_22_appnp_fast.yaml  research_2026_05_22_appnp_pubmed_confirm.yaml  research_2026_05_22_appnp_pubmed_refine.yaml  research_2026_05_22_cavity_fast.yaml  research_2026_05_22_entropy_gated_fast.yaml  research_2026_05_22_frustration_fast.yaml  research_2026_05_22_gat_batch1.yaml  research_2026_05_22_gat_batch2.yaml  research_2026_05_22_gated_appnp_fast.yaml  research_2026_05_22_gatv2_cora_confirm.yaml  research_2026_05_22_gatv2_fast.yaml  research_2026_05_22_gatv2_pubmed_confirm.yaml  research_2026_05_22_gcn2_fast.yaml  research_2026_05_22_gcn_batch1.yaml  research_2026_05_22_gcn_batch2.yaml  research_2026_05_22_gin_batch1.yaml  research_2026_05_22_gin_batch2.yaml  research_2026_05_22_gin_cora_confirm.yaml  (+36 more)
research/: AGENT_SCRATCHPAD.md  ARCHITECTURE_IDEAS.md  GENERATED_ARCHITECTURE_IDEAS.md  GPR_GNN_DESCRIPTION.md  INSIGHTS.md  LONG_RUNNING_RESEARCH.md  PROGRAM.md
scripts/: download_data.py  evaluate.py
tests/: test_config_loading.py  test_model_shapes.py  test_normal_tree_backedge_gnn.py  test_real_dataset_smoke.py  test_registry.py  test_result_aggregation.py  test_runtime_features.py  test_sep_bottleneck_gnn.py  test_synthetic_diagnostics.py  test_toy_training.py  test_tree_pack_gnn.py
(+159 files in other folders)
