[project]
name = "gnn-gym"
version = "0.1.0"
description = "Reproducible benchmarking framework for graph neural networks."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26",
    "ogb>=1.3",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "torch>=2.6,<2.7",
    "torch-geometric>=2.5",
    "typer>=0.12",
]

[project.optional-dependencies]
ogb = ["ogb>=1.3"]
tracking = ["tensorboard>=2.16", "wandb>=0.16"]

[project.scripts]
gnngym = "gnn_gym.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
